objects/Campaign_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Campaign_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Team Member</label>
    <nameField>
        <displayFormat>CTM-{0000}</displayFormat>
        <label>Campaign Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>